Migrated more services to auto-detection for Homepage

--- a/production/database/pgadmin4/service.yaml
+++ b/production/database/pgadmin4/service.yaml
@@ -109,6 +109,10 @@ metadata:
     traefik.ingress.kubernetes.io/frontend-entry-points: http,https
     traefik.ingress.kubernetes.io/router.tls: "true"
     traefik.ingress.kubernetes.io/redirect-entry-point: https
+    gethomepage.dev/enabled: "true"
+    gethomepage.dev/group: Services
+    gethomepage.dev/icon: pgadmin.png
+    gethomepage.dev/name: pgAdmin 4
 spec:
   tls:
     - hosts:
