--- a/production/default/file-browser/values.yaml
+++ b/production/default/file-browser/values.yaml
@@ -45,6 +45,11 @@ service:
 
 ingress:
   main:
+    annotations:
+      gethomepage.dev/enabled: "true"
+      gethomepage.dev/group: Services
+      gethomepage.dev/icon: filebrowser.png
+      gethomepage.dev/name: File Browser
     hosts:
       - host: file-browser.services.untouchedwagons.com
         paths:
