--- a/production/default/homepage/service.yaml
+++ b/production/default/homepage/service.yaml
@@ -225,9 +225,6 @@ data:
             - YouTube:
                 icon: youtube.png
                 href: https://youtube.com
-            - Twitter:
-                icon: twitter.png
-                href: https://twitter.com
             - Mastodon:
                 icon: mastodon.png
                 href: https://mstdn.ca
@@ -237,64 +234,13 @@ data:
             - BlueSky:
                 icon: bluesky.png
                 href: https://bsky.app
-        - Multimedia:
-            - Sonarr:
-                icon: sonarr.png
-                href: https://sonarr.services.untouchedwagons.com
-                widget:
-                  type: sonarr
-                  url: https://sonarr.services.untouchedwagons.com
-                  key: 0fe183143c5745269ae3b9ea163c8f85
-            - Radarr:
-                icon: radarr.png
-                href: https://radarr.services.untouchedwagons.com
-                widget:
-                  type: radarr
-                  url: https://radarr.services.untouchedwagons.com
-                  key: 0416a6d418be4cd7b9b64e3862aa436a
-            - Prowlarr:
-                icon: prowlarr.png
-                href: https://prowlarr.services.untouchedwagons.com
-                widget:
-                  type: prowlarr
-                  url: https://prowlarr.services.untouchedwagons.com
-                  key: fa88672ddbeb4b5683a009951076bf38
-            - Bazarr:
-                icon: bazarr.png
-                href: https://bazarr.services.untouchedwagons.com
-                widget:
-                  type: bazarr
-                  url: https://bazarr.services.untouchedwagons.com
-                  key: b9f8668f49e13b76f2c872e5bcaf2048
-            - Lidarr:
-                icon: lidarr.png
-                href: https://lidarr.services.untouchedwagons.com
-                widget:
-                  type: lidarr
-                  url: https://lidarr.services.untouchedwagons.com
-                  key: 1555da6d78404bffb22c90ace2b31b31
-            - Jellyfin:
-                icon: jellyfin.png
-                href: https://jellyfin.services.untouchedwagons.com
-                widget:
-                    type: jellyfin
-                    url: https://jellyfin.services.untouchedwagons.com
-                    key: c8f345d99d1a47eba3eef1a75c946516
+            - Lemmy:
+                icon: lemmy.png
+                href: https://lemmy.ca
 
-        - Download Clients:
-            - qBitTorrent:
-                icon: qbittorrent.png
-                href: https://qbittorrent.services.untouchedwagons.com
-                widget:
-                  type: qbittorrent
-                  url: https://qbittorrent.services.untouchedwagons.com
-            - SABnzbd:
-                icon: sabnzbd.png
-                href: https://sabnzbd.services.untouchedwagons.com
-                widget:
-                  type: sabnzbd
-                  url: https://sabnzbd.services.untouchedwagons.com
-                  key: 441c51b1799e551d7b4757b179fe7e96
+        - Multimedia: []
+
+        - Download Clients: []
 
         - Security:
             - Front door camera:
@@ -337,22 +283,19 @@ data:
             - Proxmox:
                 icon: proxmox.png
                 href: https://pve.internal.untouchedwagons.com:8006
-                # widget:
-                #     type: proxmox
-                #     url: https://pve-node-01.internal.untouchedwagons.com:8006
-                #     username: api@pam!homepage
-                #     password: 2041a948-ba79-44ed-b0ce-e9a5300cbc42
+                widget:
+                    type: proxmox
+                    url: https://pve.internal.untouchedwagons.com:8006
+                    username: root@pam!pve-exporter
+                    password: ac4d0a24-cafa-4174-81ba-a24a05b3d9c2
             - Proxmox Backup Server:
                 icon: proxmox.png
                 href: https://vault.internal.untouchedwagons.com:8007
-                # widget:
-                #   type: proxmoxbackupserver
-                #   url: https://vault.internal.untouchedwagons.com:8007
-                #   username: root@pam!homepage
-                #   password: a68b0d0f-a97b-4c57-9025-a54758686405
-            - Home Assistant:
-                icon: home-assistant.png
-                href: https://home-assistant.services.untouchedwagons.com
+                widget:
+                  type: proxmoxbackupserver
+                  url: https://vault.internal.untouchedwagons.com:8007
+                  username: root@pam!homepage
+                  password: a68b0d0f-a97b-4c57-9025-a54758686405
             - Traefik:
                 icon: traefik.png
                 href: https://traefik.services.untouchedwagons.com
@@ -368,34 +311,10 @@ data:
             - Technitium:
                 icon: technitium.png
                 href: http://technitium.internal.untouchedwagons.com
-            - ZWave JS UI:
-                icon: zwavejs2mqtt.png
-                href: https://zwave.services.untouchedwagons.com
 
-        - Services:
-            - Vaultwarden:
-                icon: bitwarden.png
-                href: https://vaultwarden.services.untouchedwagons.com
-            - IT Tools:
-                icon: it-tools.png
-                href: https://it-tools.services.untouchedwagons.com
-            - pgAdmin 4:
-                icon: pgadmin.png
-                href: https://pgadmin4.services.untouchedwagons.com
-            - File Browser:
-                icon: filebrowser.png
-                href: https://file-browser.services.untouchedwagons.com
+        - Services: []
 
-        - Monitoring:
-            - Grafana:
-                icon: grafana.png
-                href: https://grafana.services.untouchedwagons.com
-            - Prometheus:
-                icon: prometheus.png
-                href: https://prometheus.services.untouchedwagons.com
-            - Alert Manager:
-                icon: alertmanager.png
-                href: https://alertmanager.services.untouchedwagons.com
+        - Monitoring: []
 
     widgets.yaml: |
         - search:
