--- a/production/default/jellyfin/service.yaml
+++ b/production/default/jellyfin/service.yaml
@@ -121,6 +121,13 @@ metadata:
     traefik.ingress.kubernetes.io/frontend-entry-points: http,https
     traefik.ingress.kubernetes.io/router.tls: "true"
     traefik.ingress.kubernetes.io/redirect-entry-point: https
+    gethomepage.dev/enabled: "true"
+    gethomepage.dev/group: Multimedia
+    gethomepage.dev/icon: jellyfin.png
+    gethomepage.dev/name: Jellyfin
+    gethomepage.dev/widget.type: "jellyfin"
+    gethomepage.dev/widget.url: "https://jellyfin.services.untouchedwagons.com"
+    gethomepage.dev/widget.key: "441c51b1799e551d7b4757b179fe7e96"
 spec:
   rules:
   - host: jellyfin.services.untouchedwagons.com
