Adjusted *arr exporters so that metrics are labelled correctly

--- a/production/monitoring/exporter-qbittorrent/values.yaml
+++ b/production/monitoring/exporter-qbittorrent/values.yaml
@@ -8,10 +8,8 @@ controllers:
     containers:
       main:
         image:
-          repository: ghcr.io/onedr0p/exportarr
-          tag: v1.6.2
-        args: 
-          - bazarr
+          repository: ghcr.io/esanchezm/prometheus-qbittorrent-exporter
+          tag: v1.4.0
         securityContext:
           allowPrivilegeEscalation: false
           capabilities:
@@ -19,9 +17,12 @@ controllers:
             - all
             add: ['CHOWN', 'FOWNER', 'SETGID', 'SETUID']
         env:
-          PORT: "9707"
-          URL: "http://bazarr.servarr.svc.cluster.local:6767"
-          APIKEY: "b9f8668f49e13b76f2c872e5bcaf2048"
+          QBITTORRENT_HOST: "qbittorrent.default.svc.cluster.local"
+          QBITTORRENT_PORT: "8080"
+          QBITTORRENT_USER: "admin"
+          QBITTORRENT_PASS: "adminadmin"
+          EXPORTER_PORT: "9707"
+          VERIFY_WEBUI_CERTIFICATE: "false"
 
 service:
   main:
@@ -29,8 +30,6 @@ service:
     ports:
       http:
         port: 9707
-    labels:
-      instance: "exporter-bazarr.monitoring.svc.cluster.local"
 
 serviceMonitor:
   main:
@@ -42,5 +41,3 @@ serviceMonitor:
         path: /metrics
         interval: 1m
         scrapeTimeout: 10s
-    targetLabels:
-      - instance
