Fixed qbittorrent dashboard Replaced basic exporter deployment with helm template

--- a/production/monitoring/exporter-qbittorrent/values.yaml
+++ b/production/monitoring/exporter-qbittorrent/values.yaml
@@ -30,6 +30,8 @@ service:
     ports:
       http:
         port: 9707
+    labels:
+      instance: "exporter-qbittorrent.monitoring.svc.cluster.local"
 
 serviceMonitor:
   main:
@@ -41,3 +43,5 @@ serviceMonitor:
         path: /metrics
         interval: 1m
         scrapeTimeout: 10s
+    targetLabels:
+      - instance
