--- a/production/default/jellyfin/values.yaml
+++ b/production/default/jellyfin/values.yaml
@@ -44,10 +44,18 @@ service:
     controller: main
     ports:
       http:
-        port: 8080
+        port: 8096
 
 ingress:
   main:
+    annotations:
+      gethomepage.dev/enabled: "true"
+      gethomepage.dev/group: Multimedia
+      gethomepage.dev/icon: jellyfin.png
+      gethomepage.dev/name: Jellyfin
+      gethomepage.dev/widget.type: "jellyfin"
+      gethomepage.dev/widget.url: "https://jellyfin.services.untouchedwagons.com"
+      gethomepage.dev/widget.key: "c8f345d99d1a47eba3eef1a75c946516"
     hosts:
       - host: jellyfin.services.untouchedwagons.com
         paths:
