--- a/production/servarr/sonarr/service.yaml
+++ b/production/servarr/sonarr/service.yaml
@@ -50,7 +50,7 @@ spec:
               value: "sonarr"
       containers:
         - name: sonarr
-          image: ghcr.io/onedr0p/sonarr-develop:4.0.1.1168
+          image: ghcr.io/onedr0p/sonarr:4.0.2
           securityContext:
             allowPrivilegeEscalation: false
             capabilities:
