--- a/production/monitoring/exporter-qbittorrent/values.yaml
+++ b/production/monitoring/exporter-qbittorrent/values.yaml
@@ -17,7 +17,7 @@ controllers:
             - all
             add: ['CHOWN', 'FOWNER', 'SETGID', 'SETUID']
         env:
-          QBITTORRENT_HOST: "qbittorrent.default.svc.cluster.local"
+          QBITTORRENT_HOST: "qbittorrent-main.default.svc.cluster.local"
           QBITTORRENT_PORT: "8080"
           QBITTORRENT_USER: "admin"
           QBITTORRENT_PASS: "adminadmin"
