--- a/production/monitoring/exporter-zfs/service.yaml
+++ b/production/monitoring/exporter-zfs/service.yaml
@@ -14,7 +14,7 @@ spec:
     - targets:
       - vault.internal.untouchedwagons.com:9134
       - storage.internal.untouchedwagons.com:9134
-      - pve.internal.untouchedwagons.com:9134
+      - proxmox.internal.untouchedwagons.com:9134
 ---
 apiVersion: monitoring.coreos.com/v1
 kind: PrometheusRule
