--- a/production/servarr/prowlarr/values.yaml
+++ b/production/servarr/prowlarr/values.yaml
@@ -35,14 +35,14 @@ controllers:
           repository: ghcr.io/onedr0p/prowlarr
           tag: 1.15.0.4361
         env:
-          LIDARR__API_KEY: "fa88672ddbeb4b5683a009951076bf38"
-          LIDARR__AUTHENTICATION_METHOD: "None"
-          LIDARR__AUTHENTICATION_REQUIRED: "DisabledForLocalAddresses"
-          LIDARR__POSTGRES_HOST: "postgresql-cluster-rw.database.svc.cluster.local"
-          LIDARR__POSTGRES_MAIN_DB: "prowlarr-main"
-          LIDARR__POSTGRES_LOG_DB: "prowlarr-logs"
-          LIDARR__POSTGRES_USER: "prowlarr"
-          LIDARR__POSTGRES_PASSWORD: "DespoticPubProprietySavour"
+          PROWLARR__API_KEY: "fa88672ddbeb4b5683a009951076bf38"
+          PROWLARR__AUTHENTICATION_METHOD: "None"
+          PROWLARR__AUTHENTICATION_REQUIRED: "DisabledForLocalAddresses"
+          PROWLARR__POSTGRES_HOST: "postgresql-cluster-rw.database.svc.cluster.local"
+          PROWLARR__POSTGRES_MAIN_DB: "prowlarr-main"
+          PROWLARR__POSTGRES_LOG_DB: "prowlarr-logs"
+          PROWLARR__POSTGRES_USER: "prowlarr"
+          PROWLARR__POSTGRES_PASSWORD: "CulpableRadianceCavityDespotic"
 
       backup:
         image:
