--- a/production/default/vaultwarden/values.yaml
+++ b/production/default/vaultwarden/values.yaml
@@ -6,29 +6,24 @@ controllers:
     strategy: Recreate
 
     initContainers:
-      restore:
+      postgres-init:
         image:
-          repository: untouchedwagons/simple-restore
-          tag: 1.0.4
+          repository: ghcr.io/onedr0p/postgres-init
+          tag: 15.5
         env:
-          BACKUP_APPEND_DIRECTORY: "/kubernetes/production/vaultwarden"
-          BACKUP_BASE_NAME: "vaultwarden"
+          INIT_POSTGRES_HOST: "postgresql-cluster-rw.database.svc.cluster.local"
+          INIT_POSTGRES_USER: "vaultwarden"
+          INIT_POSTGRES_PASS: "CrookScandalousLaurelMajestic"
+          INIT_POSTGRES_DBNAME: "vaultwarden"
+          INIT_POSTGRES_SUPER_PASS: "TrembleBulwarkBeautifulGossip"
 
     containers:
       main:
         image:
           repository: vaultwarden/server
-          tag: 1.30.0-alpine
-
-      backup:
-        image:
-          repository: untouchedwagons/simple-backup
-          tag: 1.0.6
+          tag: 1.30.5-alpine
         env:
-          BACKUP_APPEND_DIRECTORY: "/kubernetes/production/vaultwarden"
-          BACKUP_BASE_NAME: "vaultwarden"
-          BACKUP_RETENTION: "24"
-          BACKUP_FREQUENCY: "0 */8 * * *"
+          DATABASE_URL: postgresql://vaultwarden:CrookScandalousLaurelMajestic@postgresql-cluster-rw.database.svc.cluster.local:5432/vaultwarden
 
 service:
   main:
@@ -56,28 +51,3 @@ ingress:
       - hosts: 
         - untouchedwagons.com
         secretName: com-untouchedwagons-services
-
-persistence:
-  config:
-    type: persistentVolumeClaim
-    accessMode: ReadWriteOnce
-    size: 256Mi
-    advancedMounts:
-      main: 
-        main:
-          - path: /config
-        backup:
-          - path: /data
-        restore:
-          - path: /data
-
-  nfs-backups:
-    type: "nfs"
-    server: "192.168.35.30"
-    path: "/mnt/tank/Media/Backups"
-    advancedMounts:
-      main: 
-        backup:
-          - path: /backups
-        restore:
-          - path: /backups
