--- a/production/default/node-feature-discovery/rules.yaml
+++ b/production/default/node-feature-discovery/rules.yaml
@@ -13,4 +13,4 @@ spec:
       matchFeatures:
         - feature: usb.device
           matchExpressions:
-            vendor: { op: In, value: ["1a6e", "089a"] }
+            vendor: { op: In, value: ["18d1", "9302"] }
