--- a/rook-ceph/rook-ceph-cluster/values.yaml
+++ b/rook-ceph/rook-ceph-cluster/values.yaml
@@ -545,7 +545,7 @@ cephFileSystems:
 # -- Settings for the filesystem snapshot class
 # @default -- See [CephFS Snapshots](../Storage-Configuration/Ceph-CSI/ceph-csi-snapshot.md#cephfs-snapshots)
 cephFileSystemVolumeSnapshotClass:
-  enabled: false
+  enabled: true
   name: ceph-filesystem
   isDefault: true
   deletionPolicy: Delete
@@ -557,7 +557,7 @@ cephFileSystemVolumeSnapshotClass:
 # -- Settings for the block pool snapshot class
 # @default -- See [RBD Snapshots](../Storage-Configuration/Ceph-CSI/ceph-csi-snapshot.md#rbd-snapshots)
 cephBlockPoolsVolumeSnapshotClass:
-  enabled: false
+  enabled: true
   name: ceph-block
   isDefault: false
   deletionPolicy: Delete
