--- a/production/default/jellyfin/values.yaml
+++ b/production/default/jellyfin/values.yaml
@@ -18,7 +18,7 @@ controllers:
       main:
         image:
           repository: jellyfin/jellyfin
-          tag: 10.8.13-1
+          tag: 10.8.13-amd64
         resources:
           limits:
             memory: 2048Mi
@@ -32,7 +32,7 @@ controllers:
       backup:
         image:
           repository: untouchedwagons/simple-backup
-          tag: 1.0.6
+          tag: 1.1.0
         env:
           BACKUP_APPEND_DIRECTORY: "/kubernetes/production/jellyfin"
           BACKUP_BASE_NAME: "jellyfin"
