--- a/production/servarr/backups/tdarr.yaml
+++ b/production/servarr/backups/tdarr.yaml
@@ -10,6 +10,16 @@ spec:
       ttlSecondsAfterFinished: 30
       template:
         spec:
+          affinity:
+            podAffinity:
+              requiredDuringSchedulingIgnoredDuringExecution:
+                - labelSelector:
+                    matchExpressions:
+                    - key: app.kubernetes.io/name
+                      operator: In
+                      values:
+                      - tdarr
+                  topologyKey: "kubernetes.io/hostname"
           containers:
             - name: backup
               image: untouchedwagons/simple-backup:1.1.0
@@ -32,6 +42,7 @@ spec:
             - name: container-data
               persistentVolumeClaim:
                 claimName: tdarr-config
+                readOnly: true
             - name: backups
               nfs:
                 server: 192.168.35.30
