--- a/production/default/it-tools/values.yaml
+++ b/production/default/it-tools/values.yaml
@@ -1,6 +1,10 @@
 ---
 # yaml-language-server: $schema=https://raw.githubusercontent.com/bjw-s/helm-charts/app-template-3.0.1/charts/other/app-template/values.schema.json
 
+defaultPodOptions:
+  annotations:
+    enable.version-checker.io/main: "true"
+
 controllers:
   main:
     strategy: Recreate
