--- a/production/default/vaultwarden/values.yaml
+++ b/production/default/vaultwarden/values.yaml
@@ -1,6 +1,14 @@
 ---
 # yaml-language-server: $schema=https://raw.githubusercontent.com/bjw-s/helm-charts/app-template-3.0.1/charts/other/app-template/values.schema.json
 
+defaultPodOptions:
+  annotations:
+    enable.version-checker.io/postgres-init: "true"
+    enable.version-checker.io/main: "true"
+    # match-regex.version-checker.io/main: ^\d+\.\d+\.\d+-alpine$
+    use-sha.version-checker.io/main: "false"
+    use-metadata.version-checker.io/main: "true"
+
 controllers:
   main:
     strategy: Recreate
@@ -21,7 +29,7 @@ controllers:
       main:
         image:
           repository: vaultwarden/server
-          tag: 1.30.5-alpine
+          tag: 1.30.5
         env:
           DATABASE_URL: postgresql://vaultwarden:CrookScandalousLaurelMajestic@postgresql-cluster-rw.database.svc.cluster.local:5432/vaultwarden
 
