--- a/production/monitoring/exporter-idrac/service.yaml
+++ b/production/monitoring/exporter-idrac/service.yaml
@@ -29,6 +29,8 @@ metadata:
   namespace: monitoring
   labels:
     app: exporter-idrac
+  annotations:
+    enable.version-checker.io/exporter-idrac: "true"
 spec:
   replicas: 1
   progressDeadlineSeconds: 600
