Working lidarr-config backup

--- a/production/default/namespace.yaml
+++ b/production/default/namespace.yaml
@@ -1,6 +1,7 @@
-kind: Namespace
+---
 apiVersion: v1
+kind: Namespace
 metadata:
-  name: servarr
+  name: default
   annotations:
     volsync.backube/privileged-movers: "true"
