--- a/production/volsync-system/replicationsource.yaml
+++ b/production/volsync-system/replicationsource.yaml
@@ -2,11 +2,11 @@
 apiVersion: volsync.backube/v1alpha1
 kind: ReplicationSource
 metadata:
-  name: lidarr-config-backup
+  name: bazarr-config-backup
   namespace: servarr
 spec:
   # The PVC to be backed up
-  sourcePVC: lidarr-config
+  sourcePVC: bazarr-config
   trigger:
     # Take a backup every 8 hours
     schedule: "0 */8 * * *"
@@ -14,7 +14,7 @@ spec:
     # Prune the repository (repack to free space) every 2 weeks
     pruneIntervalDays: 14
     # Name of the Secret with the connection information
-    repository: lidarr-config
+    repository: bazarr-config
     # Retention policy for backups
     retain:
       hourly: 4
@@ -22,10 +22,98 @@ spec:
       weekly: 0
       monthly: 0
       yearly: 0
-    # Clone the source volume prior to taking a backup to ensure a
+    # Snapshot the source volume prior to taking a backup to ensure a
     # point-in-time image.
     copyMethod: Snapshot
     # The StorageClass to use when creating the PiT copy (same as source PVC if omitted)
     storageClassName: ceph-block
     # The VSC to use if the copy method is Snapshot (default if omitted)
+    volumeSnapshotClassName: ceph-block
+---
+apiVersion: volsync.backube/v1alpha1
+kind: ReplicationSource
+metadata:
+  name: lidarr-config-backup
+  namespace: servarr
+spec:
+  sourcePVC: lidarr-config
+  trigger:
+    schedule: "0 */8 * * *"
+  restic:
+    pruneIntervalDays: 14
+    repository: lidarr-config
+    retain:
+      hourly: 4
+      daily: 14
+      weekly: 0
+      monthly: 0
+      yearly: 0
+    copyMethod: Snapshot
+    storageClassName: ceph-block
+    volumeSnapshotClassName: ceph-block
+---
+apiVersion: volsync.backube/v1alpha1
+kind: ReplicationSource
+metadata:
+  name: prowlarr-config-backup
+  namespace: servarr
+spec:
+  sourcePVC: prowlarr-config
+  trigger:
+    schedule: "0 0 * * *"
+  restic:
+    pruneIntervalDays: 14
+    repository: prowlarr-config
+    retain:
+      hourly: 4
+      daily: 14
+      weekly: 0
+      monthly: 0
+      yearly: 0
+    copyMethod: Snapshot
+    storageClassName: ceph-block
+    volumeSnapshotClassName: ceph-block
+---
+apiVersion: volsync.backube/v1alpha1
+kind: ReplicationSource
+metadata:
+  name: radarr-config-backup
+  namespace: servarr
+spec:
+  sourcePVC: radarr-config
+  trigger:
+    schedule: "0 */8 * * *"
+  restic:
+    pruneIntervalDays: 14
+    repository: radarr-config
+    retain:
+      hourly: 4
+      daily: 14
+      weekly: 0
+      monthly: 0
+      yearly: 0
+    copyMethod: Snapshot
+    storageClassName: ceph-block
+    volumeSnapshotClassName: ceph-block
+---
+apiVersion: volsync.backube/v1alpha1
+kind: ReplicationSource
+metadata:
+  name: sonarr-config-backup
+  namespace: servarr
+spec:
+  sourcePVC: sonarr-config
+  trigger:
+    schedule: "0 */8 * * *"
+  restic:
+    pruneIntervalDays: 14
+    repository: sonarr-config
+    retain:
+      hourly: 4
+      daily: 14
+      weekly: 0
+      monthly: 0
+      yearly: 0
+    copyMethod: Snapshot
+    storageClassName: ceph-block
     volumeSnapshotClassName: ceph-block
